importando archivo json. Pendiente ajustar coordenadas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-20140107.jar=C:\\development\\lib\\json-20140107.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${libs.jme3-test-data.classpath}
+    ${libs.jme3-test-data.classpath}:\
+    ${file.reference.json-20140107.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
